--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
-    "babel-plugin-transform-decorators": "6.24.1",
-    "babel-plugin-transform-decorators-legacy": "1.3.5",
+    "classnames": "2.2.6",
     "mobx": "5.15.4",
     "mobx-react": "6.1.8",
     "react": "16.12.0",
