--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
   "main": "src/index.js",
   "dependencies": {
     "classnames": "2.2.6",
+    "enzyme": "3.11.0",
+    "jest": "25.1.0",
     "mobx": "5.15.4",
     "mobx-react": "6.1.8",
+    "mockdate": "2.0.5",
     "react": "16.12.0",
     "react-devtools": "4.5.0",
     "react-dom": "16.12.0",
